Add styling to existing HTML files via CSS file
- Add stylesheet links to HTML files and a few classes
- Add basic, but somewhat lame, styling to various HTML elements
    as part of the CSS portion of the foundations course

--- a/recipes/bulgogi_beef_sliders.html
+++ b/recipes/bulgogi_beef_sliders.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe - Bulgogi Beef Sliders</title>
+    <link rel="stylesheet" href="../styles.css" >
 </head>
 <body>
     <h1>Bulgogi Beef Sliders</h1>
@@ -18,7 +19,7 @@
         It takes more time to heat up a pan to medium-heat than it does to cook the beef to an appropriate level of done-ness. Just get some nice browning on the very outside and the inside should be perfectly medium, even at this thickness.
         Then just assemble it with the rolls and some fridge staples and you've got yourself an easy meal!
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
     <p>For the bulgogi:</p>
     <ul>
         <li>Beef, ribeye steak</li>
@@ -37,7 +38,7 @@
         <li>Kewpie mayo</li>
         <li>Pickles of your choosing</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
     <ol>
         <li>Cut the ribeye into thin 1/4" strips across the grain</li>
         <li>Season the cut beef with salt and pepper, then add gochujang, gochugaru, soy sauce, sugar, rice vinegar, and oyster sauce and mix to combine</li>
