--- a/recipes/onigiri_tuna_mayo.html
+++ b/recipes/onigiri_tuna_mayo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe - Tuna Mayo Onigiri</title>
+    <link rel="stylesheet" href="../styles.css" >
 </head>
 <body>
     <h1>Tuna Mayo Onigiri</h1>
@@ -21,7 +22,7 @@
         The most famous brand of Japanese mayonnaise is "Kewpie," which can be found in most Asian grocery stores these days.
         There's many other filings to try, so if you like this one, be sure to explore the myriad other options!
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
     <ul>
         <li>Rice, short grain</li>
         <li>Canned tuna, drained</li>
@@ -30,7 +31,7 @@
         <li>Salt</li>
         <li>Pepper</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
     <ol>
         <li>Cook the white rice (I recommend a rice cooker for convenience)</li>
         <li>Scoop out 1 cup of hot white rice and allow it to cool</li>
