--- a/recipes/pesto_tortellini.html
+++ b/recipes/pesto_tortellini.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe - Pesto Tortellini</title>
+    <link rel="stylesheet" href="../styles.css" >
 </head>
 <body>
     <h1>Pesto Tortellini</h1>
@@ -15,14 +16,14 @@
         Pre-packaged tortellini, ready-made pesto, and cherry tomatoes and herbs if you have them sitting around.
         Cheese too.
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
     <ul>
         <li>Tortellini with any filling, the ready in 5-min after boiling variety</li>
         <li>Pesto, any kind, jarred</li>
         <li>(optional) Cherry tomatoes</li>
         <li>(optional) Basil</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
     <ol>
         <li>Boil water and cook the tortellini according to the package instructions</li>
         <li>While the tortellini is cooking, if you want to add cherry tomatoes and basil, cut the tomatoes in half and chiffonade the basil</li>
